﻿5/22/2015 0.8.10.3
  More API changes.
  Added safety layer to API ensuring it can not be accessed before it is ready.
  Added scanning aspects for:
  * Encoded Pattern
  * Singularities
  * EU & RF P2P Tunnels
  Fixes #188: Crafting result is now updated on both client and server if wand vis levels change.

5/21/2015 0.8.10.3
  Code cleanup.
  API name changes.
  Required research no longer shows up for ThE research if the ThE research is disabled.

5/19/2015 0.8.10.3
  Internal code cleanup.
  Much more robust checking of disabled AE or TC features.
  * I have tried to catch every possible issue that can arise from disabling features in either mod, but to say its complex is a bit of an understatement.
  Essentia provider recipe change: Replaced one of the coalescence cores with a diffusion core.

5/19/2015 0.8.10.2
  Bugfix: Essentia Storage Bus updates AE network if contents are externally changed.
  Bugfix: Essentia Terminal sync issue if a cell is removed/added while viewing terminal.
  Bugfix: Essentia Conversion Monitor crash.
  Bugfix: Essentia Conversion Monitor no longer eats stacks.
  Essentia Conversion Monitor: When shift-double-rightclicking the monitor only takes essentia matching the input aspect, instead of any essentia in the players inventory.
  Bugfix: Priority tab icon size corrected.
  Essentia storage bus can now be attached to a ME Condenser.

5/16/2015 0.8.10.1
  Redundant code cleanup.
  Added Essentia Conversion Monitor.

5/13/2015 0.8.10.1
  Essentia Storage Bus supports ME Interface part for subnetworks.
  Bugfix: The essentia sub-network sync bug ~should be~ fixed.
  Added AE security to Arcane Assembler GUI.
  Terminals can be rotated with a wrench.
  Bugfix: Vis export from the VRI now supports crystal attunement.
  Fixes #132: Added Essentia Storage Monitor.

5/12/2015 0.8.10.1
  Bugfix: ACT search bar retains its contents when viewing NEI recipes.
  Fixes #75: Added Tall Centered ACT terminal style.