@@ -6,6 +6,7 @@
   * Singularities
   * EU & RF P2P Tunnels
   Fixes #188: Crafting result is now updated on both client and server if wand vis levels change.
+  Conversion monitor reports who is doing the insert or removal of essentia to the AE network.
 
 5/21/2015 0.8.10.3
   Code cleanup.
